💄 fixed wrapping menu for very large navs

--- a/files/scss/austerity.scss
+++ b/files/scss/austerity.scss
@@ -304,7 +304,6 @@ header {
 
     & > [role="bottom-part"] {
         display: block;
-        white-space: nowrap;
 
         & > * {
             margin: 0.25em;
