--- a/files/scss/origin.scss
+++ b/files/scss/origin.scss
@@ -284,7 +284,6 @@ header {
 
     & > [role="bottom-part"] {
         display: block;
-        white-space: nowrap;
 
         & > * {
             margin: 0.25em;
